# medops

./: .dockerignore  README.md  docker-compose.yml  metadata.json
repo/services/web/: Cargo.toml  Dockerfile  nginx.conf
repo/services/web/src/: main.rs  state.rs  state.test.rs  ui_logic.rs  ui_logic.test.rs
repo/services/web/src/api/: mod.rs
repo/services/web/src/components/: app_shell.rs  auth_gate.rs  feedback.rs
repo/services/web/src/features/: guards.rs  mod.rs  navigation.rs  session.rs
repo/services/web/src/hooks/: admin.rs  analytics.rs  audits.rs  bedboard.rs  campaigns.rs  dining.rs  experiments.rs  ingestion.rs  mod.rs  orders.rs  patients.rs  uploads.rs
repo/services/web/src/pages/: admin.rs  analytics.rs  audits.rs  bedboard.rs  campaigns.rs  dashboard.rs  dining.rs  experiments.rs  ingestion.rs  mod.rs  orders.rs  patients.rs
services/api/: Cargo.toml
services/api/config/: default.toml
services/api/config/ingestion_fixture/: page2.html
services/api/migrations/: 003_intranet_schema.sql  006_security_isolation_ingestion.sql  009_auth_argon2_schema.sql  011_audit_append_only_triggers_and_export_permission.sql  012_attachment_payload_mysql_authority.sql  013_visit_note_encryption.sql
services/api/src/contracts/: mod.rs
services/api/src/infrastructure/: mod.rs
services/api/src/infrastructure/adapters/: mod.rs  mysql_app_repository.rs
services/api/src/repositories/: mod.rs
services/api/src/routes/: audits.rs  auth.rs  bedboard.rs  cafeteria.rs  experiments.rs  ingestion.rs  session.rs
services/api/src/services/: app_service.rs
(+133 files in other folders)
