[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
contracts = { path = "../../crates/contracts" }
dioxus = { version = "0.6", features = ["web"] }
gloo-net = "0.6"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location", "Headers", "Request", "RequestInit", "Response"] }
